# waybar-ai-usage

./: CLAUDE.md  README.md  claude.py  codex.py  common.py  copilot.py  pyproject.toml  waybar-config-example.jsonc  waybar-style-example.css  waybar_ai_usage.py  zai.py  zen.py
aur/waybar-ai-usage/: .SRCINFO  PKGBUILD
docs/: formatting.md
